tests/positive/phase1/009_bitwise_and.c
// TEST: bitwise_and
// DESCRIPTION: Bitwise AND operator
// EXPECTED_EXIT: 4
// ENVIRONMENT: hosted
// PHASE: 1
// STANDARD_REF: 6.5.10 (Bitwise AND operator)

int main(void) {
    return 6 & 5;
}
