tests/negative/syntax_errors/004_invalid_token.c
// TEST: invalid_token
// DESCRIPTION: Invalid character in source
// EXPECT_COMPILE_FAIL: yes
// ERROR_PATTERN: unexpected character
// PHASE: 1

int main(void) {
    return @;
}
